up: create run go-app

--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,6 +1,5 @@
-FROM alpine
-RUN apk add --update --no-cache build-base python3-dev python3 libffi-dev libressl-dev bash git gettext curl \
- && curl -O https://bootstrap.pypa.io/get-pip.py \
- && python3 get-pip.py \
- && pip install --upgrade six awscli awsebcli
-CMD tail -f /dev/null
+FROM golang:latest
+
+COPY ././
+RUN go build -o main .
+CMD ["./main"]
