--- a/docker/toolbox/Dockerfile
+++ b/docker/toolbox/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:latest
 
-COPY ./../simpleWebServer/main ./build
+COPY ../simpleWebServer/main ./build
 RUN go build -o main .
-CMD ["./../simpleWebServer/main"]
+CMD ["../simpleWebServer/main"]
