--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,9 @@
-FROM golang:latest
+FROM golang:1.14
 
+WORKDIR /go/src/app
 COPY . .
-RUN go build -o main .
-CMD ["./main"]
+
+RUN go get -d -v ./...
+RUN go install -v ./...
+
+CMD ["app"]
