--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,13 @@
-FROM golang:1.14
+FROM golang:latest
 
-WORKDIR /go/src/app
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+
 COPY . .
 
-RUN go get -d -v ./...
-RUN go install -v ./...
+RUN go build -o main .
 
-CMD ["app"]
+EXPOSE 8080
+
+CMD ["./main"]
