--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,11 @@
 FROM golang:1.9.2 
 
-ADD . /go/src/app
+ADD . /go/src/main
 
-WORKDIR /go/src/app
+WORKDIR /go/src/main
 
-RUN go get app
+RUN go get main
 
 RUN go install
 
-ENTRYPOINT ["/go/bin/app"]
+ENTRYPOINT ["/go/bin/main"]
