--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY ./ /app
 
-RUN go mod download
+RUN go get -d -v ./...
+RUN go install -v ./...
 
 ENTRYPOINT go run go/src/main.go
